feat: Delete user endpoint
